# game-dev-study

./: .gitignore  CMakeLists.txt  README.md
assets/fonts/enter_command/: credits.txt
games/: CMakeLists.txt
games/01-snake/: CMakeLists.txt  Cell.h  GameStates.cpp  GameStates.h  Snake.cpp
games/game1/: CMakeLists.txt  GameStates.cpp  GameStates.h  Snake.cpp  Snake.h  Widgets.cpp  Widgets.h  main.cpp
games/lib/: CMakeLists.txt  Widgets.cpp  Widgets.h  gds.cpp  gds.h
scripts/: setup.bat
